--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.text-justify{
+    text-indent: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#backToTop {
+    height: 2rem;
+    width: 2rem;
+    border-radius: 50%;
+    margin: 15px;
+    transition: 0.4s ease;
+    position: fixed;
+    right: 2rem;
+    bottom: 2rem;
+}
+  
+#backToTop:hover {
+    box-shadow: 0px 0px 20px 20px rgba(0, 0, 0, 0);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#backToTop div {
+    height: 1.5rem;
+    width: 1.5rem;
+    border-top: 4px solid #202020;
+    border-left: 4px solid #202020;
+    transform: rotate(45deg);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
